force-app/main/default/objects/Driver__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Carrier account (Account with Carrier record type) that employs or contracts with this driver</description>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>