force-app/main/default/objects/Driver__c/fields/DOT_Number__c.field-meta.xml
<CustomField>
    <fullName>DOT_Number__c</fullName>
    <description>DOT ID number for driver (FMCSA identification)</description>
    <externalId>true</externalId>
    <label>DOT Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>