force-app/main/default/objects/Driver__c/fields/Hazmat_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Hazmat_Certification_Expiration__c</fullName>
    <description>Date when hazmat certification expires (if applicable)</description>
    <label>Hazmat Certification Expiration</label>
    <type>Date</type>
</CustomField>