force-app/main/default/objects/Driver__c/fields/HOS_Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>HOS_Remaining_Hours__c</fullName>
    <description>Hours of Service (HOS) remaining until driver needs rest</description>
    <label>HOS Remaining Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>