force-app/main/default/objects/Driver__c/fields/License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration__c</fullName>
    <description>Date when CDL license expires</description>
    <label>License Expiration</label>
    <type>Date</type>
</CustomField>