force-app/main/default/objects/Driver__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>Commercial Driver License (CDL) number</description>
    <externalId>true</externalId>
    <label>License Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>