force-app/main/default/objects/Driver__c/fields/Medical_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Medical_Certification_Expiration__c</fullName>
    <description>Date when medical certification (DOT physical) expires</description>
    <label>Medical Certification Expiration</label>
    <type>Date</type>
</CustomField>