force-app/main/default/objects/Driver__c/fields/Motive_Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Motive_Driver_ID__c</fullName>
    <description>External ID from Motive for this driver (for linking tracking events to drivers)</description>
    <externalId>true</externalId>
    <label>Motive Driver ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>